--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint --ext .jsx --ext .js containers App.js",
+    "lint-fix": "eslint --ext .jsx --ext .js containers App.js --fix"
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.3",
